[package]
name = "journal"
version = "0.1.0"
edition = "2024"

[dependencies]
monoio = "0.2"
flume = "0.11"
oneshot = "0.1"
thiserror = "2.0"
async-lock = "3.4"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

[dev-dependencies]
anyhow = "1.0"
assert2 = "0.3"
proptest = "1.9"
tempfile = "3.23"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
